# dfpn

./: .dockerignore  .gitignore  2311.18545v2.txt  Anchor.toml  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  config-cpu.yaml  config.yaml  package-lock.json  package.json  tsconfig.json
dashboard/: Dockerfile  README.md  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  supervisord.conf  vite.config.ts
dashboard/src/: App.vue
dashboard/src/api/: indexer.ts  solana.ts  types.ts
dashboard/src/components/charts/: ModalityDistributionChart.vue  RequestsOverTimeChart.vue  WorkerReputationChart.vue
dashboard/src/components/common/: AddressDisplay.vue  DataTable.vue  EmptyState.vue  LoadingSpinner.vue  ModalityTags.vue  Pagination.vue  StakeDisplay.vue  StatCard.vue  StatusBadge.vue
dashboard/src/components/layout/: AppHeader.vue  AppSidebar.vue
dashboard/src/components/learn/: ComparisonTable.vue  FaqAccordion.vue  InfoCard.vue  ParticipateTabNav.vue  RoadmapTimeline.vue  StatHighlight.vue  StepIndicator.vue
dashboard/src/components/wallet/: WalletButton.vue
dashboard/src/composables/: useFormatters.ts  useModalities.ts  usePagination.ts  usePolling.ts
dashboard/src/pages/: ModelDetailPage.vue  ModelsPage.vue  MyDashboardPage.vue  NotFoundPage.vue  OverviewPage.vue  RequestDetailPage.vue  RequestsPage.vue  WorkerDetailPage.vue  WorkersPage.vue
dashboard/src/pages/learn/: DetectionModelsPage.vue  FaqPage.vue  HowItWorksPage.vue  ParticipateClientsPage.vue  ParticipateModelDevsPage.vue  ParticipateWorkersPage.vue  RoadmapPage.vue  TokenomicsPage.vue  WhatIsDfpnPage.vue
dashboard/src/router/: index.ts
dashboard/src/stores/: dashboard.ts  health.ts  models.ts  network.ts  requests.ts  wallet.ts  workers.ts
docs/: api-specification.md  architecture.md  client-integration-guide.md  commit-reveal-protocol.md  detection-models.md  milestone-plan.md  node-operator-guide.md  operational-model.md  quickstart-node.md  roadmap.md  solana-design.md  threat-model.md  tokenomics.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/community/: contributing.md  faq.md  roadmap.md
documentation/docs/concepts/: architecture.md  detection-models.md  how-it-works.md  tokenomics.md
documentation/docs/getting-started/: clients.md  index.md  model-developers.md  workers.md
documentation/docs/reference/: api.md  configuration.md  program-ids.md
indexer/: Cargo.toml
indexer/src/: api.rs  indexer.rs  lib.rs  main.rs  schema.rs  subscriber.rs
models/: README.md
models/face-forensics/: download_weights.sh  inference.py  requirements.txt
models/ssl-antispoofing/: download_weights.sh  inference.py  requirements.txt
models/universal-fake-detect/: download_weights.sh  inference.py  requirements.txt
models/video-ftcn/: Dockerfile  config.py  docker-compose.yml  download_weights.sh  server.py
programs/analysis-marketplace/: Cargo.toml
programs/analysis-marketplace/src/: lib.rs
programs/content-registry/: Cargo.toml
programs/content-registry/src/: lib.rs
programs/model-registry/: Cargo.toml
programs/model-registry/src/: lib.rs
programs/rewards/: Cargo.toml
programs/rewards/src/: lib.rs
programs/shared/: Cargo.toml
programs/shared/src/: lib.rs
programs/worker-registry/: Cargo.toml
programs/worker-registry/src/: lib.rs
scripts/: setup-models.sh  start-worker.sh  stop-worker.sh  test-models.sh
sdk/dfpn-sdk/: package.json  tsconfig.json
sdk/dfpn-sdk/src/: accounts.ts  client.ts  constants.ts  index.ts  instructions.ts  types.ts  utils.ts
site/: astro.config.ts  entrypoint.sh  nginx.conf  package-lock.json  package.json  supervisord.conf  tsconfig.json
site/public/: llms.txt  robots.txt
site/src/: content.config.ts
site/src/components/layout/: ArticleLayout.astro  BaseLayout.astro  DashboardLayout.astro  Header.astro  HomeLayout.astro  Sidebar.astro  TopNav.astro
site/src/components/learn/: ComparisonTable.astro  InfoCard.astro  ParticipateTabNav.astro  RoadmapTimeline.astro  StatHighlight.astro  StepIndicator.astro
site/src/components/seo/: BaseHead.astro  JsonLd.astro
site/src/components/vue/: AppHeaderIsland.vue  ModelDetailIsland.vue  ModelsIsland.vue  MyDashboardIsland.vue  OverviewIsland.vue  RequestDetailIsland.vue  RequestsIsland.vue  WorkerDetailIsland.vue  WorkersIsland.vue
site/src/content/blog/: ai-generated-images-vs-real.md  best-deepfake-detection-tools-2026.md  c2pa-content-credentials-vs-deepfake-detection.md  decentralized-ai-verification.md  deepfake-detection-api-comparison.md  deepfake-detection-for-identity-verification.md  how-deepfake-detection-works.md  how-to-detect-ai-generated-videos.md  multi-model-consensus-deepfake-detection.md  voice-cloning-detection.md
site/src/integrations/: llms-full.ts
site/src/lib/: navigation.ts
site/src/pages/: 404.astro  index.astro  my-dashboard.astro  rss.xml.ts
site/src/pages/blog/: [...slug].astro  index.astro
site/src/pages/learn/: detection-models.astro  faq.astro  how-it-works.astro  index.astro  roadmap.astro  tokenomics.astro
site/src/pages/learn/participate/: clients.astro  model-developers.astro  workers.astro
site/src/pages/models/: [id].astro  index.astro
site/src/pages/requests/: [id].astro  index.astro
site/src/pages/workers/: [operator].astro  index.astro
site/src/styles/: global.css
tests/: dfpn.ts
worker/dfpn-worker/: Cargo.toml
worker/dfpn-worker/src/: client.rs  commit_reveal.rs  config.rs  inference.rs  main.rs  task.rs
