[package]
name = "dfpn-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
borsh.workspace = true
sha2.workspace = true
